apps/hermes-agent/components/api/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: automata
spec:
  defaultBackend:
    service:
      name: hermes-agent
      port:
        name: api
  tls:
    - hosts:
        - automata
